# networth_tracker

./: README.md  pyproject.toml
app/: config.py  db.py  main.py  models.py  utils.py
app/routes/: accounts.py  dashboard.py  settings.py  snapshots.py
app/templates/: account_edit.html  accounts.html  base.html  dashboard.html  dashboard_empty.html  settings.html  snapshot_edit.html  snapshot_form.html  snapshots.html
