[project]
name = "networth"
version = "0.1.0"
description = "Local-first net worth tracker (FastAPI + Jinja + HTMX + SQLite)."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn>=0.30.0",
    "jinja2>=3.1.4",
    "sqlmodel>=0.0.21",
    "pydantic>=2.7.0",
    "python-multipart>=0.0.9"
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.2.0",
    "httpx>=0.27.0",
    "ruff>=0.5.0"
]
